--- a/index.css
+++ b/index.css
@@ -98,6 +98,9 @@ input::placeholder{
 input:valid{
     outline:1.5px solid green;
 }
+input:invalid{
+    outline:1.5px solid red;
+}
 .form-container{
     box-shadow:-3px 2px 5px 1px grey;
     height:auto;
