--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-size:20px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 @font-face{
@@ -11,8 +12,8 @@
 }
 .main-container{
     height:auto;
-    width:70%;
-    margin: 0.5em 10em;
+    width:85%;
+    margin: auto;
     display: flex;
     padding:0.5em;
 }
@@ -70,6 +71,7 @@ input:active{
 .input-div{
     display: flex;
     flex-direction: column;
+    width:45%;
 }
 .input-div>label{
     font-size:0.6em;
@@ -88,8 +90,8 @@ input:required + span::after{
     background-color: #596D48;
     border-radius:50px 10px 50px 10px;
     padding:5px 10px;
-    top:-50px;
-    left:140px;
+    top:-58px;
+    left:200px;
 }
 input::placeholder{
     font-size:0.6em;
@@ -97,7 +99,10 @@ input::placeholder{
 }
 input:valid{
     outline:1.5px solid green;
+}input:invalid{
+    outline:1.5px solid red;
 }
+
 .form-container{
     box-shadow:-3px 2px 5px 1px grey;
     height:auto;
@@ -105,6 +110,7 @@ input:valid{
     margin-bottom:1em;
     background-color: white;
     padding:1.2em;   
+   
 }
 form{
     display: flex;
