--- a/index.css
+++ b/index.css
@@ -2,45 +2,38 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-size:20px;
+    font-size:25px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 @font-face{
     font-family:'Norsebold';
-    src:url('Norse-Bold.otf') format('opentype');
+    src:url('assets/fonts/Norse-Bold.otf') format('opentype');
 
 }
 .main-container{
-    height:auto;
-    width:85%;
     width:80%;
-    margin: auto;
+    margin: 1.5em auto;
     display: flex;
-    padding:0.5em;
 }
 .side-bar{
     height:auto;
-    width:30%;
+    width:45%;
     position:relative;
 }
 .form-content{
     width:70%;
-    padding:3em 0;
+    padding:2em 0;
     background-color: whitesmoke;
-    border-radius: 5px;
-    height:100vh;
 }
 .form-content h4{
     text-align: left;
-    max-width: 45ch;
-    margin-left:1.5em;
+    margin: 0 1.5em;
     font-weight:600;
 }
 #sidebar-img{
     width:100%;
     height:100%;
     object-fit: cover;
-    border-radius: 5px;;
 }
 .side-bar-logo{
     position:absolute;
@@ -54,6 +47,7 @@
 }
 #logo-image{
     height:5em;
+    margin-right: 1em;
 }
 .sidebar-title{
     color:white;
@@ -63,12 +57,10 @@
 input{
   font-family: inherit;
   font-size: 100%;
-  padding: 2px; margin: 0;
-  border:2px solid #E5E7EB;
+  padding: 2px; 
+  border:2px solid #6b7280;
   border-radius:5px;
-}
-input:active{
-    border:1px solid blue;
+  margin-bottom:.1em;
 }
 .input-div{
     display: flex;
@@ -76,14 +68,17 @@ input:active{
     width:45%;
 }
 .input-div>label{
-    font-size:0.6em;
-}
-input:focus{
-    outline:1px solid blue;
+    margin:.5em;
+    font-size:.7em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
 }
 input + span {
     position:relative;
 }
+/*
 input:required + span::after{
     position:absolute;
     font-size:0.5em;
@@ -92,48 +87,63 @@ input:required + span::after{
     background-color: #596D48;
     border-radius:50px 10px 50px 10px;
     padding:5px 10px;
-    top:-58px;
-    left:200px;
-}
+    top:-6em;
+    left:28em;
+}*/
 input::placeholder{
     font-size:0.6em;
     color:grey;
 }
-input:valid{
-    outline:1.5px solid green;
-}input:invalid{
-    outline:1.5px solid red;
-}
 .form-container{
     box-shadow:-3px 2px 5px 1px grey;
     height:auto;
-    margin-top:1.5em;
-    margin-bottom:1em;
+    margin:1.5em 0;
     background-color: white;
     padding:1.2em;   
-   
 }
 form{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     gap:2em;
 }
 .form-content p{
     text-align: left;
-    margin-left:1.5em;
+    margin-left:1em;
 }
 button{
     color:white;
     background-color: #596D48;
     margin:0.5em 1em;
-    padding:1.2em;
+    padding:.8em;
     border-radius: 10px;
     width:10em;
+    cursor: pointer;
 }
 span{
     color:#596D48
 }
 a{
     text-decoration: none;
+}
+.required{
+    background-color: #596D48;
+    border-radius:50px 10px 50px 10px;
+    font-size: 1em;
+    padding:.4em;
+    height:2em;
+    color:white;
+}
+.input-feeback.error{
+    width: 100%;
+    font-size:.65em;
+    color: red;
+    border-radius: 0 0 5px 5px;
+    display: none;
+}
+.input-feeback.valid{
+    display: none;
+    margin-left:.3em;
+}
+.eg{
+    font-size: 1.2em;
 }
